[tool.poetry]
name = "wtforglib"
description = "A set of utility functions I use in my various python projects."
version = "1.0.3-dev2"
license = "MIT"

authors = [
  "Quien Sabe <qs5779@mail.com>",
]

readme = "README.md"

homepage = "https://github.com/wtfo-guru/wtforglib"
documentation = "https://wtforglib.readthedocs.io/en/stable"

keywords = []

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "wtforglib" },
    { include = "wtforglib/py.typed" },
]

[tool.poetry.dependencies]
python = ">=3.9.0,<4.0"
types-pyyaml = "^6.0.12"
pyyaml = "^6.0"
jinja2 = "^3.1.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.9"
wemake-python-styleguide = "^0.19"
flake8-pytest-style = ">=1.6,<3.0"
doc8 = "^1.0"
nitpick = "^0.35"
pytest = ">=7.4,<9.0"
pytest-cov = ">=4,<6"
pytest-randomly = "^3.12"
black = ">=23.12,<25.0"
packaging = ">=22,<25"
isort = "^5.13"
testfixtures = ">=7.0.4,<9.0.0"
pyfakefs = "^5.1.0"
requests-cache = ">=0.9,<1.3"
flake8 = ">=6.1,<8.0"
safety = ">=2.3,<4.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=5.2,<8.0"
sphinx-autodoc-typehints = ">=1.24,<3.0"
m2r2 = "^0.3"
tomli = "^2.0"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
