[project]
name = "wtforglib"
description = "A set of utility functions I use in my various python projects."
keywords = []
version = "1.3.1-dev1"
dynamic = ["classifiers"]
readme = "README.md"
authors = [{name = "Quien Sabe", email = "qs5779@mail.com"}]
requires-python = '>=3.10,<4.0'
dependencies = [
  'types-pyyaml (>=6.0.12,<7.0.0)',
  'pyyaml (>=6.0,<7.0)',
  'jinja2 (>=3.1.2,<4.0.0)'
]

# [project.license]
# license = ["License :: OSI Approved :: MIT"]

[project.urls]
homepage = "https://github.com/wtfo-guru/wtforglib"
documentation = "https://wtforglib.readthedocs.io/en/stable"

[tool.poetry]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "wtforglib" },
    { include = "wtforglib/py.typed" },
]
requires-poetry = '>=2.0'

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
mypy = "^1.9"
wemake-python-styleguide = "^1.0"
flake8-pytest-style = ">=1.6,<3.0"
doc8 = "^2.0"
docutils = "^0.21"
pytest = ">=7.4,<9.0"
pytest-cov = "^7.0.0"
pytest-randomly = "^4.0.0"
black = "^25.0"
packaging = ">=22,<26"
isort = "^6.0"
testfixtures = ">=7.0.4,<9.0.0"
pyfakefs = "^5.10.2"
requests-cache = ">=0.9,<1.3"
flake8 = ">=6.1,<8.0"
tomli = "^2.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0"
sphinx-autodoc-typehints = "^3.0"
tomli = "^2.0"
sphinx-mdinclude = "^0.6.2"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "https://www.wtfo-guru.com/.well-known/nitpick-wtf-style.toml"
